# SmartGadget-Reader

./: .editorconfig  .env.example  .pre-commit-config.yaml  README.md  TODO.md  main.py  pyproject.toml  setup.cfg
cli/: __init__.py  __main__.py  daemon.py
collector/: __init__.py  collector.py
reader/: __init__.py  reader.py
shared/: __init__.py  data.py  gadget.py  measurement.py
smartgadget/: AnyDeviceManager.py  NotifiableBTLEConnection.py  NotifiableSmartGadget.py  __init__.py  sht40.py
