[tool.poetry]
name = "smartgadget-reader"
version = "0.1.0"
description = ""
authors = ["Nicolas Da Mutten <nicolas@damutten.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
gatt = "^0.2.7"
dbus-python = {version = "^1.3.2", platform = "linux"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
