[tool.poetry]
name = "smartgadget-reader"
version = "0.1.0"
description = ""
authors = ["Nicolas Da Mutten <nicolas@damutten.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
python-smartgadget = {version = "^0.1.3", platform = "linux"}
APScheduler = "^3.10.4"
argparse-logging = "^2020.11.26"
asyncio = "^3.4.3"
influxdb-client = {extras = ["async"], version = "^1.37.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
